# home_work_Django

./: Database_hw_3_Django  data.json  groups.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_and_more.py  0003_version.py  0004_product_owner.py  0005_alter_product_options_product_is_published.py
catalog/templates/: category_list.html
catalog/templates/catalog/: base.html  contacts.html  home.html  product.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  utils.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py
users/templates/users/: login.html  reset.html  user_form.html
vlog/: admin.py  models.py  urls.py  views.py
vlog/migrations/: 0001_initial.py  0002_alter_vlog_name_alter_vlog_preview_alter_vlog_slug.py
vlog/templates/vlog/: vlog_confirm_delete.html  vlog_detail.html  vlog_form.html  vlog_list.html
