[tool.poetry]
name = "home-work-django"
version = "0.1.0"
description = ""
authors = ["Roman Slobolinsky <rslobolinsky13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
pillow = "^10.3.0"
django = "^5.0.4"
django-stubs = "^4.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
